# morecantile

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  CHANGES.md  CHANGES.txt  CONTRIBUTING.md  MANIFEST.in  README.md  benchmark.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy_mkdocs.yml  gdalversion.yml  release.yml
advanced/geographic/: index.html
api/morecantile/commons/: index.html
api/morecantile/defaults/: index.html
api/morecantile/errors/: index.html
api/morecantile/models/: index.html
api/morecantile/utils/: index.html
benchmarks/: README.md  benchmarks.py  requirements.txt
cli/: index.html
contributing/: index.html
dev/benchmarks/: data.js
docs/: cli.md  mkdocs.yml  usage.md
docs/src/: cli.md  tms-v2.md  usage.md  v1_to_v2.md
docs/src/advanced/: geographic.md
docs/src/api/morecantile/: commons.md  defaults.md  errors.md  models.md  utils.md
morecantile/: __init__.py  commons.py  defaults.py  errors.py  models.py  utils.py
morecantile/data/: CDB1GlobalGrid.json  CanadianNAD83_LCC.json  EuropeanETRS89_LAEAQuad.json  GNOSISGlobalGrid.json  LINZAntarticaMapTilegrid.json  NZTM2000.json  NZTM2000Quad.json  README.md  UPSAntarcticWGS84Quad.json  UPSArcticWGS84Quad.json  UTM31WGS84Quad.json  WGS1984Quad.json  WebMercatorQuad.json  WorldCRS84Quad.json  WorldCRS84QuadVariableWidth.json  WorldMercatorWGS84Quad.json  __init__.py
morecantile/data1.0/: CanadianNAD83_LCC.json  LINZAntarticaMapTilegrid.json  UPSAntarcticWGS84Quad.json  UTM31WGS84Quad.json  WebMercatorQuad1.0.json  WorldCRS84Quad.json  WorldMercatorWGS84Quad1.0.json
morecantile/scripts/: __init__.py  cli.py
morecantile/scripts/templates/: index.html
release-notes/: index.html
search/: search_index.json
tests/: __init__.py  benchmarks.py  conftest.py  test_cli.py  test_mercantile_conform.py  test_mercantile_equivalency.py  test_models.py  test_morecantile.py  test_tms_variable_width.py  test_utils.py
tests/fixtures/bottomLeft_tms/: WebMercatorQuadBottomLeft.json
tests/fixtures/v1_tms/: CanadianNAD83_LCC.json  UPSAntarcticWGS84Quad.json  WebMercatorQuad.json
tms-v2/: index.html
usage/: index.html
