[project]
name = "morecantile"
description = "Construct and use map tile grids (a.k.a TileMatrixSet / TMS)."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
keywords = ["GIS", "TMS", "TileMatrixSet", "Map Tile"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "attrs",
    "pyproj>=3.1,<4.0",
    "pydantic~=2.0",
    "click",
]

[project.optional-dependencies]
rasterio = [
    "rasterio>=1.2.1",
]

[dependency-groups]
dev = [
    "mercantile",
    "pytest",
    "pytest-cov",
    "pre-commit",
]

docs = [
    "mkdocs>=1.4.3",
    "mkdocs-material[imaging]>=9.5",
    "griffe-inherited-docstrings>=1.0.0",
    "mkdocstrings[python]>=0.25.1",
    "pygments",
]

benchmark = [
    "pytest-benchmark",
]

deploy = [
    "hatch",
]

[project.urls]
Source = "https://github.com/developmentseed/morecantile"
Documentation = "https://developmentseed.org/morecantile/"

[project.scripts]
morecantile = "morecantile.scripts.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "morecantile/__init__.py"

[tool.hatch.build.targets.sdist]
only-include = ["morecantile/"]

[tool.hatch.build.targets.wheel]
only-include = ["morecantile/"]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
known_first_party = ["morecantile"]
known_third_party = ["rasterio", "pydantic", "pyproj", "mercantile"]
default_section = "THIRDPARTY"

[tool.mypy]
no_strict_optional = true

[tool.ruff.lint]
select = [
    "D1",  # pydocstyle errors
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # flake8
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # ignore zip() without an explicit strict= parameter, only support with python >3.10
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D1"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:You will likely lose important projection*:UserWarning",
]

[tool.bumpversion]
current_version = "7.0.2"

search = "{current_version}"
replace = "{new_version}"
regex = false
tag = true
commit = true
tag_name = "{new_version}"

[[tool.bumpversion.files]]
filename = "morecantile/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
